--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     implementation "com.linecorp.bot:line-bot-spring-boot:4.3.0"
 }
 
-project:{
+project {
     dependencies {
         implementation "org.springframework.boot:spring-boot-starter-web"
         testImplementation "org.springframework.boot:spring-boot-starter-test"
