--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 
 project {
     dependencies {
+        implementation project(':line-bot-spring-boot')
         implementation "org.springframework.boot:spring-boot-starter-web"
         testImplementation "org.springframework.boot:spring-boot-starter-test"
     }
